# vrchat-recorder

./: .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  pyproject.toml
demos/: audio_recording.py  run.ps1  vr_controller_event.py  vr_tracking.py  vr_tracking_recorder_demo.py
demos/output/: .gitignore
preliminary_investigations/: get_gamepad.py  key_to_pad.py  key_to_pad_pygame.py  obs_record_start.py  osc_feedback.py  record_gamepad.py  record_vr.py  record_vr_headset_and_controller.py
tests/: test__main__.py  test_argument_parser.py  test_confirm_preparation.py  test_data_constants.py  test_date_utils.py  test_gamepad_recorder.py  test_name_utils.py  test_obs_video_recorder.py  test_osc_feedback_recorder.py
tests/abc/: test_base_recorder.py  test_csv_recorder.py
tests/audio/: test_audio_recorder.py  test_mic_recorder.py  test_speaker_recorder.py
tests/vr/: conftest.py  test_binary_converter.py  test_constants.py  test_controller_event_recorder.py  test_tracking_data_holders.py  test_tracking_reader.py  test_tracking_recorder.py
vrchat_recorder/: __main__.py  argument_parser.py  confirm_preparation.py  data_constants.py  date_utils.py  gamepad_recorder.py  name_utils.py  obs_video_recorder.py  osc_feedback_recorder.py
vrchat_recorder/abc/: base_recorder.py  csv_recorder.py
vrchat_recorder/audio/: __init__.py  audio_recorder.py  mic_recorder.py  speaker_recorder.py
vrchat_recorder/vr/: __init__.py  binary_converter.py  constants.py  controller_event_recorder.py  tracking_data_holders.py  tracking_reader.py  tracking_recorder.py
