[tool.poetry]
name = "vrchat-recorder"
version = "0.1.0"
description = "VRChat Recorder is a tool for recording VRChat Videos, Audios, OSC Feedbacks, and Controller inputs."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vrchat_recorder"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pygame = "^2.3.0"
inputs = "^0.5"
pyvjoy = "^1.0.1"
keyboard = "^0.13.5"
openvr = "^1.23.701"
numpy = "^1.24.2"
scipy = "^1.10.1"
obs-websocket-py = "^1.0"
obsws-python = "^1.4.2"
python-osc = "^1.8.1"
soundcard = "^0.4.2"
soundfile = "^0.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.0"
pytest-skip-slow = "^0.0.5"
pytest-mock = "^3.10.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--color=yes",
    "--durations=0",
    "--strict-markers",
    "--doctest-modules",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
log_cli = "True"
markers = [
    "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
